<resources>

    <!--All strings of project externalised to here to translation needs-->

    <string name="app_name">MakeMyMeeting</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MakeMyMeeting</string>
    <string name="nav_header_subtitle">Developed By 908031</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="google_maps_API_key">AIzaSyDHtB_e8eZyMT16lZGbX9l8tLNR67lkgMc</string>
    <string name="title_activity_maps">Map</string>

    <string name="enter_create_meeting">Enter Details Below to Create a Meeting</string>
    <string name="meeting_name">Meeting Name:</string>
    <string name="add_attendee">Add Attendee:</string>
    <string name="enter_add_attendee">Enter Attendee Here</string>
    <string name="enter_time_date">Select Time and Date of Meeting</string>
    <string name="select_time_date">Select Date and Time</string>
    <string name="selected_time_date">Selected Date and Time</string>
    <string name="save_notes">Save Notes</string>
    <string name="_notes">Notes:</string>
    <string name="nice_job">Nice Job! Now Create the Meeting! </string>
    <string name="create_meeting">Create Meeting</string>
    <string name="edit_meeting">Want to edit a Meeting? </string>
    <string name="load_meeting">Click Load Meetings to Find Your Meetings Unique ID </string>
    <string name="enterid_meeting">Enter Meeting ID to Edit Here</string>
    <string name="performedit_meeting">Perform Edits to Meeting</string>
    <string name="wantto_delete">Want to Delete an Item? Enter the Meeting ID Below </string>
    <string name="enterdelete_meeting">Enter Meeting ID to Delete Here</string>
    <string name="delete_meeting">Delete Meeting</string>

    <string name="history_meeting">History of Meetings</string>

    <string name="_attendee">Attendee</string>

    <string name="load_meetings">Load Meetings</string>
    <string name="want_to_edit">Want to Edit/Delete a meeting?</string>
    <string name="press_load">Press Load Meetings to Get The ID to Perform Edits / Delete</string>
    <string name="procees_scroll">Then Proceed to Create a Meeting and Scroll Down</string>

    <string name="edit_settings">Edit Your Settings:</string>
    <string name="go_back">Go Back</string>

    <string name="navigate_home">Home</string>
    <string name="_crud">Create/Edit/Delete Meeting</string>
    <string name="search_address">Search Meeting Address</string>
    <string name="previous_meetings">Previous Meetings</string>
    <string name="_information">Information</string>
    <string name="build_alpha">Build: Alpha</string>
    <string name="email">908031@swansea.ac.uk</string>

</resources>
